# This Source Code Form is subject to the terms of the Mozilla Public
# License, v. 2.0. If a copy of the MPL was not distributed with this
# file, You can obtain one at http://mozilla.org/MPL/2.0/.
#
# Copyright © 2018 Corporation for Digital Scholarship

[package]
# package name on NPM = @citeproc-rs/ + this field = @citeproc-rs/wasm
name = "wasm"
version = "0.0.1"
authors = ["Cormac Relf <web@cormacrelf.net>"]
license = "MPL-2.0"
edition = "2018"
repository = "https://github.com/cormacrelf/citeproc-rs"
description = "citeproc-rs, compiled to WebAssembly"

# TODO: Set the opt level on new wasm-pack 0.6.0 config
# when it's released, so as not to interfere with the
# other native binary targets (cargo only lets you set it
[package.metadata.wasm-pack.profile.release]
wasm-opt = ["-O3", "-g"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
# by default, give debuggable panics.
default = ["console"]
console = ["console_error_panic_hook", "console_log", "fern"]
# disable the source of js-demo's visualisation for the public API
dot = []
no-modules = []
zotero = ["no-modules"]

[dependencies]
citeproc = { path = "../citeproc", default-features = false, features=[] }
csl = { path = "../csl", features = ["serde1"] }
citeproc-io = { path = "../io" }
cfg-if = "1.0.0"
console_log = { version = "0.2.0", optional = true }
fern = { version = "0.6.0", optional = true }

# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }

wasm-bindgen-futures = "0.4.12"
js-sys = "0.3.39"
serde = "1.0.116"
serde_derive = "1.0.116"
serde_json = "1.0.57"
thiserror = "1.0.22"
wasm-bindgen-test = "0.3.23"

[dependencies.rand]
version = "0.7.3"
features = ["wasm-bindgen"]
# when 0.8.0 hits you'll need this instead
# getrandom = { version = "0.1.0", features = ["js"] }

[dependencies.wasm-bindgen]
version = "0.2.70"
features = ["serde-serialize"]

[dependencies.log]
version = "0.4.11"
features = ["release_max_level_warn"]
# this doesn't work
# [target.'cfg(not(feature="console"))'.dependencies.log]

# [dev-dependencies]
# wasm-bindgen-test = "0.3.18"
